--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -16,6 +16,37 @@
     padding: 5px;
     color: #999;
   }
+.xc-class-box {
+  display: inline-block;
+  text-align: center;
+}
+.xc-class-box .xc-class-img {
+    width: 88px;
+    height: 88px;
+  }
+.xc-class-box .xc-class-name {
+    line-height: 22px;
+    margin-top: 10px;
+    font-size: 16px;
+    color: #333;
+    font-weight: 600;
+  }
+.xc-class-box .xc-class-btn {
+    width: 100%;
+    display: block;
+    color: #fff;
+    line-height: 30px;
+    border-radius: 15px;
+    background-color: rgba(0, 133, 230, 1);
+  }
+.xc-class-box .des {
+    color: #999;
+    line-height: 30px;
+  }
+.xc-class-box .des .num {
+      color: #0085e6;
+      margin: 0 4px;
+    }
 .xc-score {
   text-align: center;
 }
@@ -61,6 +92,76 @@
         color: #FF4548;
         margin-left: 5px;
       }
+.xc-table-box{
+  min-height: 600px;
+}
+.coustom-body {
+  background-color: rgba(255, 255, 255, 1);
+  -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, .05);
+          box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, .05);
+  border-radius: 8px;
+  margin-bottom: 15px;
+  padding-bottom: 30px;
+}
+.coustom-body .xc-score {
+    padding-top: 45px;
+  }
+.coustom-body .xc-score .xc-score-des {
+      margin-top: 45px;
+      margin-bottom: 20px;
+    }
+.coustom-body .coustom-return-box {
+    text-align: center;
+  }
+.coustom-body .coustom-return-box .coustom-return-link {
+      width: 188px;
+      line-height: 36px;
+      color: #fff;
+      background-color: #0085e6;
+      border-radius: 23px;
+      font-size: 16px;
+      text-align: center;
+      display: inline-block;
+    }
+.coustom-body .coustom-currency-box {
+    margin-top: 50px;
+    text-align: center;
+  }
+.coustom-body .coustom-currency-box .coustom-currency {
+      display: inline-block;
+    }
+.coustom-body .coustom-currency-box .coustom-currency .coustom-currency-left {
+        width: 103px;
+        display: inline-block;
+      }
+.coustom-body .coustom-currency-box .coustom-currency .coustom-currency-left .coustom-currency {
+          color: #EEB843;
+        }
+.coustom-body .coustom-currency-box .coustom-currency .coustom-currency-right {
+        padding-top: 5px;
+        display: inline-block;
+        text-align: left;
+        line-height: 22px;
+      }
+.coustom-body .coustom-currency-box .coustom-currency .coustom-currency-right .title {
+          padding: 14px 0;
+          margin: 0px;
+          font-size: 16px;
+          font-weight: 400;
+          color: #0085e6;
+        }
+.coustom-body .coustom-currency-box .coustom-currency .coustom-currency-right .des:first-child {
+  color: #666666;
+}
+.xc-body .xc-mb30 {
+  margin-bottom: 30px;
+}
+.xc-body .mt40 {
+  margin-top: 40px;
+}
+.xc-body .mb100 {
+  margin-bottom: 100px;
+}
 .xc-head {
   font-size: 14px;
   padding: 16px 30px;
@@ -312,11 +413,6 @@
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
   }
-
-.xc-table-box {
-  margin: 15px 0 75px 0;
-}
-
 .xc-table {
   font-size: 14px;
   border-collapse: collapse;
@@ -326,11 +422,9 @@
   -webkit-box-shadow: 0 3px 7px 1px rgb(235, 235, 235);
           box-shadow: 0 3px 7px 1px rgb(235, 235, 235);
 }
-
 .xc-table thead {
     background-color: #0085e6;
   }
-
 .xc-table th {
     color: rgba(251, 251, 251, 1);
     line-height: 20px;
@@ -339,7 +433,6 @@
     font-weight: normal;
     position: relative;
   }
-
 .xc-table th .position {
       position: absolute;
       top: 50%;
@@ -348,14 +441,12 @@
       -webkit-transform: translate(-50%, -50%);
               transform: translate(-50%, -50%);
     }
-
 .xc-table th .table-switch {
       position: absolute;
       display: inline-block;
       right: 30px;
       cursor: pointer;
     }
-
 .xc-table th .table-switch .table-switch-warp {
         background-color: rgba(235, 235, 235, 1);
         height: 16px;
@@ -367,7 +458,6 @@
         margin-top: 2px;
         position: relative;
       }
-
 .xc-table th .table-switch .table-switch-warp .table-switch-inner {
           width: 16px;
           height: 16px;
@@ -378,32 +468,25 @@
           -webkit-transition: all 0.2s linear;
           transition: all 0.2s linear;
         }
-
 .xc-table th .table-switch.active .table-switch-warp {
           background-color: #48d8bd;
 }
-
 .xc-table th .table-switch.active .table-switch-inner {
           left: 14px;
 }
-
 .xc-table tbody {
     color: #666;
     text-align: center;
   }
-
 .xc-table tbody tr {
       height: 48px;
     }
-
 .xc-table tbody td {
       border-right: 1px solid rgba(235, 235, 235, 1)
     }
-
 .xc-table tbody td.red {
   color: #ff4548;
 }
-
 .xc-table tbody td .table-btn {
         display: inline-block;
         padding: 5px 15px;
@@ -412,35 +495,28 @@
         color: #fff;
         cursor: pointer;
 }
-
 .xc-table tbody td .table-btn.mini {
   font-size: 10px;
   padding: 4px 10px;
   border-radius: 10px;
   margin-left: 15px;
 }
-
 .xc-table tbody td .table-btn.red {
   background-color: rgba(255, 69, 72, 1);
   color: #fff;
 }
-
 .xc-table tbody td .table-img {
         width: 28px;
 }
-
 .xc-table tbody tr:nth-child(2n+1) {
       background-color: #fff;
     }
-
 .xc-table.task-table {
   border-radius: 0 0 8px 8px;
 }
-
 .xc-table.task-table thead {
       background-color: transparent;
 }
-
 .xc-table.task-table th {
       color: #666;
       font-size: 14px;
@@ -611,6 +687,7 @@
       background-color: #0085e6;
       border-radius: 15px;
       line-height: 20px;
+      cursor: pointer;
     }
 
 .xc-body .course-main .course-head {
@@ -626,7 +703,7 @@
 
 .xc-body .course-main .course-head .course-head-top {
         line-height: 28px;
-        overflow: hidden;
+        height: 28px;
       }
 
 .xc-body .course-main .course-head .course-head-top .course-head-name {
@@ -639,19 +716,20 @@
 
 .xc-body .course-main .course-head .course-head-top .course-head-classes {
           margin-left: 15px;
-          overflow: hidden;
           display: inline-block;
           float: left;
         }
 
-.xc-body .course-main .course-head .course-head-top .course-head-classes img {
+.xc-body .course-main .course-head .course-head-top .course-head-classes .classes-img {
             width: 20px;
             margin-top: -2px;
           }
 
 .xc-body .course-main .course-head .course-head-top .course-head-classes li {
             float: left;
-            cursor: pointer
+            cursor: pointer;
+            position: relative;
+            z-index: 99
           }
 
 .xc-body .course-main .course-head .course-head-top .course-head-classes li:first-child {
@@ -668,11 +746,11 @@
   padding-left: 20px;
 }
 
-.xc-body .course-main .course-head .course-head-top .course-head-classes li:last-child span {
+.xc-body .course-main .course-head .course-head-top .course-head-classes li:last-child .tip {
                 margin-top: 2px;
 }
 
-.xc-body .course-main .course-head .course-head-top .course-head-classes li:last-child span::after {
+.xc-body .course-main .course-head .course-head-top .course-head-classes li:last-child .tip::after {
                 display: inline-block;
                 width: 0;
                 height: 0;
@@ -683,6 +761,91 @@
                 margin: 3px 0 0 5px;
 }
 
+.xc-body .course-main .course-head .course-head-top .course-head-classes li .course-list {
+              display: none;
+              position: absolute;
+              width: 410px;
+              height: 670px;
+              background-color: #fff;
+              z-index: 100;
+              top: 0px;
+              right: -420px;
+              -webkit-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, .09);
+                      box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, .09);
+              border-radius: 4px;
+}
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes li .course-list::before{
+  content: "";
+  width: 0;
+  height: 0;
+  border: 15px solid #fff;
+  border-color: transparent #fff transparent transparent;
+  position: absolute;
+  top: -3px;
+  left: -22px;
+}
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes li .course-list .course-list-item {
+                margin-bottom: 30px;
+}
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes li .course-list .course-list-left {
+                display: inline-block;
+                width: 140px;
+                text-align: center;
+                vertical-align: top;
+}
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes li .course-list .course-list-left .xc-class-box {
+                  margin-top: 50%;
+                }
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes li .course-list .course-list-left.last .xc-class-box {
+  margin-top: 0;
+}
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes li .course-list .course-list-right {
+                width: 220px;
+                display: inline-block;
+}
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes li .course-list .course-list-right .course-class-item,
+                .xc-body .course-main .course-head .course-head-top .course-head-classes li .course-list .course-list-right .course-class-name {
+                  margin-bottom: 0px;
+                }
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes li .course-list .course-list-right .course-list-classes {
+                  margin-top: 5px;
+                }
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes li .course-list .course-list-right .course-list-classes-item {
+                  width: 50%;
+                  float: left;
+                  -webkit-box-sizing: border-box;
+                          box-sizing: border-box;
+                  line-height: 22px;
+                  color: #333333;
+                  padding: 10px 0 10px 30px;
+                  position: relative;
+                  display: inline-block
+                }
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes li .course-list .course-list-right .course-list-classes-item::before {
+  display: inline-block;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  content: '';
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  border-radius: 50%;
+  border: 1px solid rgba(215, 215, 215, 1);
+  background: rgba(250, 250, 251, 1);
+}
+
 .xc-body .course-main .course-head .course-head-top .course-head-types {
           display: inline-block;
           float: right;
@@ -690,7 +853,8 @@
 
 .xc-body .course-main .course-head .course-head-top .course-head-types .course-head-type {
             display: inline-block;
-            padding: 0 26px
+            padding: 0 26px;
+            cursor: pointer
           }
 
 .xc-body .course-main .course-head .course-head-top .course-head-types .course-head-type.active {
@@ -770,14 +934,76 @@
             width: 18px;
             height: 18px;
             border-radius: 50%;
-            background-color: #0085e6;
             display: inline-block;
             margin-left: 10px;
+            position: relative
           }
 
+.xc-body .course-main .course-body .course-body-left .course-untiy-imgs .img.blue::before,
+            .xc-body .course-main .course-body .course-body-left .course-untiy-imgs .img.blue::after {
+  background-color: #0085e6;
+}
+
+.xc-body .course-main .course-body .course-body-left .course-untiy-imgs .img.green::before,
+            .xc-body .course-main .course-body .course-body-left .course-untiy-imgs .img.green::after {
+  background-color: #33CBB4;
+}
+
+.xc-body .course-main .course-body .course-body-left .course-untiy-imgs .img.warn::before,
+            .xc-body .course-main .course-body .course-body-left .course-untiy-imgs .img.warn::after {
+  background-color: #FFC74E;
+}
+
+.xc-body .course-main .course-body .course-body-left .course-untiy-imgs .img.re::after{
+  -webkit-transform: rotate(60deg);
+          transform: rotate(60deg);
+  -webkit-transform-origin: left center;
+          transform-origin: left center;
+}
+
+.xc-body .course-main .course-body .course-body-left .course-untiy-imgs .img::before {
+  display: inline-block;
+  content: '';
+  width: 9px;
+  height: 18px;
+  border-radius: 9px 0 0 9px;
+}
+
+.xc-body .course-main .course-body .course-body-left .course-untiy-imgs .img::after {
+  display: inline-block;
+  content: '';
+  width: 9px;
+  height: 18px;
+  border-radius: 0 9px 9px 0;
+}
+
+.xc-body .course-main .course-body .course-body-left .course-untiy-imgs .kimg {
+            width: 14px;
+            height: 14px;
+            border-radius: 50%;
+            border-width: 2px;
+            border-style: solid;
+            display: inline-block;
+            margin-left: 10px
+          }
+
+.xc-body .course-main .course-body .course-body-left .course-untiy-imgs .kimg.blue {
+  border-color: #0085e6;
+}
+
+.xc-body .course-main .course-body .course-body-left .course-untiy-imgs .kimg.green {
+  border-color: #33CBB4;
+}
+
+.xc-body .course-main .course-body .course-body-left .course-untiy-imgs .kimg.warn {
+  border-color: #FFC74E;
+}
+
 .xc-body .course-main .course-body .course-body-center {
+        height: 600px;
         float: left;
         width: 612px;
+        background-color: #fff;
       }
 
 .xc-body .course-main .course-body .course-body-center .course-body-class {
@@ -785,53 +1011,17 @@
           float: left;
         }
 
-.xc-body .course-main .course-body .course-body-center .course-body-class .course-class-item {
-            color: #333;
-            font-size: 16px;
-            line-height: 22px;
-            margin-bottom: 20px;
+.xc-body .course-main .course-body .course-body-center .course-body-class .course-class-icon {
+            text-align: center;
+            padding: 40px 0 30px 0;
           }
-
-.xc-body .course-main .course-body .course-body-center .course-body-class .course-class-item .course-class-name {
-              margin-bottom: 11px;
-            }
-
-.xc-body .course-main .course-body .course-body-center .course-body-class .course-class-item .course-class-pro {
-              display: table-cell;
-              overflow: hidden;
-              text-align: center;
-              font-size: 12px;
-              width: 220px;
-            }
-
-.xc-body .course-main .course-body .course-body-center .course-body-class .course-class-item .course-class-pro .course-pro-warp {
-                width: 180px;
-                height: 6px;
-                background-color: #e5e5e5;
-                float: left;
-                border-radius: 6px;
-                margin-top: 6px;
-              }
-
-.xc-body .course-main .course-body .course-body-center .course-body-class .course-class-item .course-class-pro .course-pro-warp .course-pro-inner {
-                  height: 100%;
-                  border-radius: 6px;
-                  width: 71.42%;
-                  background-color: #0085e6;
-                }
-
-.xc-body .course-main .course-body .course-body-center .course-body-class .course-class-item .course-class-pro .course-pro-test {
-                float: right;
-                line-height: 17px;
-              }
-
-.xc-body .course-main .course-body .course-body-center .course-body-class .course-class-item .course-class-pro .course-pro-test span {
-                  color: #0085e6;
-                }
 
 .xc-body .course-main .course-body .course-body-right {
         width: 308px;
         float: left;
+        text-align: center;
+        background-color: #fff;
+        height: 600px;
       }
 
 .xc-body .readText-main .readText-btns {
@@ -999,6 +1189,50 @@
   background-color: #d9efff;
 }
 
+.xc-body .course-class-item {
+    color: #333;
+    font-size: 16px;
+    line-height: 22px;
+    margin-bottom: 20px;
+  }
+
+.xc-body .course-class-item .course-class-name {
+      margin-bottom: 5px;
+    }
+
+.xc-body .course-class-item .course-class-pro {
+      display: table-cell;
+      overflow: hidden;
+      text-align: center;
+      font-size: 12px;
+      width: 220px;
+    }
+
+.xc-body .course-class-item .course-class-pro .course-pro-warp {
+        width: 180px;
+        height: 6px;
+        background-color: #e5e5e5;
+        float: left;
+        border-radius: 6px;
+        margin-top: 6px;
+      }
+
+.xc-body .course-class-item .course-class-pro .course-pro-warp .course-pro-inner {
+          height: 100%;
+          border-radius: 6px;
+          width: 71.42%;
+          background-color: #0085e6;
+        }
+
+.xc-body .course-class-item .course-class-pro .course-pro-test {
+        float: right;
+        line-height: 17px;
+      }
+
+.xc-body .course-class-item .course-class-pro .course-pro-test span {
+          color: #0085e6;
+        }
+
 .readText-footer-box {
   height: 80px;
   background: rgba(255, 255, 255, 1);
@@ -1022,7 +1256,7 @@
     float: left;
     width: 108px;
     line-height: 20px;
-    padding: 10px 0 10px 20px;
+    padding: 0 0 10px 20px;
     font-size: 14px;
   }
 
