--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -16,6 +16,37 @@
     color: #999;
   }
 }
+.xc-class-box {
+  display: inline-block;
+  text-align: center;
+  .xc-class-img {
+    width: 88px;
+    height: 88px;
+  }
+  .xc-class-name {
+    line-height: 22px;
+    margin-top: 10px;
+    font-size: 16px;
+    color: #333;
+    font-weight: 600;
+  }
+  .xc-class-btn {
+    width: 100%;
+    display: block;
+    color: #fff;
+    line-height: 30px;
+    border-radius: 15px;
+    background-color: rgba(0, 133, 230, 1);
+  }
+  .des {
+    color: #999;
+    line-height: 30px;
+    .num {
+      color: #0085e6;
+      margin: 0 4px;
+    }
+  }
+}
 .xc-score {
   text-align: center;
   .xc-score-des {
@@ -60,6 +91,77 @@
       margin-top: 10px;
     }
   }
+}
+.xc-table-box{
+  min-height: 600px;
+}
+.coustom-body {
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
+  border-radius: 8px;
+  margin-bottom: 15px;
+  padding-bottom: 30px;
+  .xc-score {
+    padding-top: 45px;
+    .xc-score-des {
+      margin-top: 45px;
+      margin-bottom: 20px;
+    }
+  }
+  .coustom-return-box {
+    text-align: center;
+    .coustom-return-link {
+      width: 188px;
+      line-height: 36px;
+      color: #fff;
+      background-color: #0085e6;
+      border-radius: 23px;
+      font-size: 16px;
+      text-align: center;
+      display: inline-block;
+    }
+  }
+  .coustom-currency-box {
+    margin-top: 50px;
+    text-align: center;
+    .coustom-currency {
+      display: inline-block;
+      .coustom-currency-left {
+        width: 103px;
+        display: inline-block;
+        .coustom-currency {
+          color: #EEB843;
+        }
+      }
+      .coustom-currency-right {
+        padding-top: 5px;
+        display: inline-block;
+        text-align: left;
+        line-height: 22px;
+        .title {
+          padding: 14px 0;
+          margin: 0px;
+          font-size: 16px;
+          font-weight: 400;
+          color: #0085e6;
+        }
+        .des {
+          &:first-child {
+            color: #666666;
+          }
+        }
+      }
+    }
+  }
+}
+.xc-body .xc-mb30 {
+  margin-bottom: 30px;
+}
+.xc-body .mt40 {
+  margin-top: 40px;
+}
+.xc-body .mb100 {
+  margin-bottom: 100px;
 }
 .xc-head {
   font-size: 14px;
@@ -326,11 +428,6 @@
     box-sizing: border-box;
   }
 }
-
-.xc-table-box {
-  margin: 15px 0 75px 0;
-}
-
 .xc-table {
   font-size: 14px;
   border-collapse: collapse;
@@ -621,6 +718,7 @@
       background-color: #0085e6;
       border-radius: 15px;
       line-height: 20px;
+      cursor: pointer;
     }
 
     .course-head {
@@ -634,7 +732,7 @@
 
       .course-head-top {
         line-height: 28px;
-        overflow: hidden;
+        height: 28px;
 
         .course-head-name {
           color: #0085e6;
@@ -646,11 +744,10 @@
 
         .course-head-classes {
           margin-left: 15px;
-          overflow: hidden;
           display: inline-block;
           float: left;
 
-          img {
+          .classes-img {
             width: 20px;
             margin-top: -2px;
           }
@@ -658,7 +755,8 @@
           li {
             float: left;
             cursor: pointer;
-
+            position: relative;
+            z-index: 99;
             &:first-child {
               padding-right: 20px;
               border-right: 1px solid rgba(235, 235, 235, 1);
@@ -672,11 +770,11 @@
             &:last-child {
               padding-left: 20px;
 
-              span {
+              .tip {
                 margin-top: 2px;
               }
 
-              span::after {
+              .tip::after {
                 display: inline-block;
                 width: 0;
                 height: 0;
@@ -685,6 +783,77 @@
                 border-bottom: 6px solid transparent;
                 content: "";
                 margin: 3px 0 0 5px;
+              }
+            }
+            .course-list {
+              display: none;
+              position: absolute;
+              width: 410px;
+              height: 670px;
+              background-color: #fff;
+              z-index: 100;
+              top: 0px;
+              right: -420px;
+              box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.09);
+              border-radius: 4px;
+              &::before{
+                content: "";
+                width: 0;
+                height: 0;
+                border: 15px solid #fff;
+                border-color: transparent #fff transparent transparent;
+                position: absolute;
+                top: -3px;
+                left: -22px;
+              }
+              .course-list-item {
+                margin-bottom: 30px;
+              }
+              .course-list-left {
+                display: inline-block;
+                width: 140px;
+                text-align: center;
+                vertical-align: top;
+                .xc-class-box {
+                  margin-top: 50%;
+                }
+                &.last .xc-class-box {
+                  margin-top: 0;
+                }
+              }
+              .course-list-right {
+                width: 220px;
+                display: inline-block;
+                .course-class-item,
+                .course-class-name {
+                  margin-bottom: 0px;
+                }
+                .course-list-classes {
+                  margin-top: 5px;
+                }
+                .course-list-classes-item {
+                  width: 50%;
+                  float: left;
+                  box-sizing: border-box;
+                  line-height: 22px;
+                  color: #333333;
+                  padding: 10px 0 10px 30px;
+                  position: relative;
+                  display: inline-block;
+                  &::before {
+                    display: inline-block;
+                    top: 50%;
+                    left: 0;
+                    transform: translateY(-50%);
+                    content: '';
+                    width: 20px;
+                    height: 20px;
+                    position: absolute;
+                    border-radius: 50%;
+                    border: 1px solid rgba(215, 215, 215, 1);
+                    background: rgba(250, 250, 251, 1);
+                  }
+                }
               }
             }
           }
@@ -697,7 +866,7 @@
           .course-head-type {
             display: inline-block;
             padding: 0 26px;
-
+            cursor: pointer;
             &.active {
               color: #0085e6;
             }
@@ -775,63 +944,72 @@
             width: 18px;
             height: 18px;
             border-radius: 50%;
-            background-color: #0085e6;
             display: inline-block;
             margin-left: 10px;
+            position: relative;
+            &.blue::before,
+            &.blue::after {
+              background-color: #0085e6;
+            }
+            &.green::before,
+            &.green::after {
+              background-color: #33CBB4;
+            }
+            &.warn::before,
+            &.warn::after {
+              background-color: #FFC74E;
+            }
+            &.re::after{
+              transform: rotate(60deg);
+              transform-origin: left center;
+            }
+            &::before {
+              display: inline-block;
+              content: '';
+              width: 9px;
+              height: 18px;
+              border-radius: 9px 0 0 9px;
+            }
+            &::after {
+              display: inline-block;
+              content: '';
+              width: 9px;
+              height: 18px;
+              border-radius: 0 9px 9px 0;
+            }
+          }
+          .kimg {
+            width: 14px;
+            height: 14px;
+            border-radius: 50%;
+            border-width: 2px;
+            border-style: solid;
+            display: inline-block;
+            margin-left: 10px;
+            &.blue {
+              border-color: #0085e6;
+            }
+            &.green {
+              border-color: #33CBB4;
+            }
+            &.warn {
+              border-color: #FFC74E;
+            }
           }
         }
       }
 
       .course-body-center {
+        height: 600px;
         float: left;
         width: 612px;
-
+        background-color: #fff;
         .course-body-class {
           padding: 0 43px;
           float: left;
-
-          .course-class-item {
-            color: #333;
-            font-size: 16px;
-            line-height: 22px;
-            margin-bottom: 20px;
-
-            .course-class-name {
-              margin-bottom: 11px;
-            }
-
-            .course-class-pro {
-              display: table-cell;
-              overflow: hidden;
-              text-align: center;
-              font-size: 12px;
-              width: 220px;
-
-              .course-pro-warp {
-                width: 180px;
-                height: 6px;
-                background-color: #e5e5e5;
-                float: left;
-                border-radius: 6px;
-                margin-top: 6px;
-
-                .course-pro-inner {
-                  height: 100%;
-                  border-radius: 6px;
-                  width: 71.42%;
-                  background-color: #0085e6;
-                }
-              }
-
-              .course-pro-test {
-                float: right;
-                line-height: 17px;
-
-                span {
-                  color: #0085e6;
-                }
-              }
-            }
+          .course-class-icon {
+            text-align: center;
+            padding: 40px 0 30px 0;
           }
         }
       }
@@ -839,6 +1017,9 @@
       .course-body-right {
         width: 308px;
         float: left;
+        text-align: center;
+        background-color: #fff;
+        height: 600px;
       }
     }
   }
@@ -1008,6 +1189,49 @@
       }
     }
   }
+  .course-class-item {
+    color: #333;
+    font-size: 16px;
+    line-height: 22px;
+    margin-bottom: 20px;
+
+    .course-class-name {
+      margin-bottom: 5px;
+    }
+
+    .course-class-pro {
+      display: table-cell;
+      overflow: hidden;
+      text-align: center;
+      font-size: 12px;
+      width: 220px;
+
+      .course-pro-warp {
+        width: 180px;
+        height: 6px;
+        background-color: #e5e5e5;
+        float: left;
+        border-radius: 6px;
+        margin-top: 6px;
+
+        .course-pro-inner {
+          height: 100%;
+          border-radius: 6px;
+          width: 71.42%;
+          background-color: #0085e6;
+        }
+      }
+
+      .course-pro-test {
+        float: right;
+        line-height: 17px;
+
+        span {
+          color: #0085e6;
+        }
+      }
+    }
+  }
 }
 
 .readText-footer-box {
@@ -1031,7 +1255,7 @@
     float: left;
     width: 108px;
     line-height: 20px;
-    padding: 10px 0 10px 20px;
+    padding: 0 0 10px 20px;
     font-size: 14px;
 
     .time {
